--- a/index.html
+++ b/index.html
@@ -12,20 +12,18 @@
 <meta charset="utf-8" />
     </head>
 <body>
-    <h1>Welcome!</h1>
+    <h1>Official Portfolio of Darwin Jean-Charles</h1>
         <div class="parent">
             <div class="div1"><h2>About</h2>
                 <img src="images/IMG_1938.JPG">
-                    <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam consequat diam a lectus bibendum tincidunt. Vestibulum eleifend nulla nibh, sit amet vulputate sem imperdiet quis. Nulla euismod dui vitae convallis auctor. Vivamus vel quam ut nunc mattis eleifend. Ut non gravida arcu, non maximus felis. Pellentesque nulla nisl, sagittis non commodo vel, aliquet sit amet nisl. Fusce lacinia, enim vel molestie iaculis, erat sem dictum ex, nec luctus nunc arcu nec dui. Nunc laoreet, massa in pretium suscipit, ex lorem imperdiet magna, eget euismod lectus risus sit amet diam. Ut et lacinia nisl, non iaculis massa. Etiam gravida sodales finibus. Fusce consectetur magna ut rutrum tincidunt</p></div>
+                    <p> Darwin Jean-Charles is a visual Design Student at San Francisco State University. He is originally from Rockland County, NY but relocated to California in 2018, and currently resides in Oakland. Darwin has dabbled in multiple creative forms ranging from illustration, poetry, theatre, and music, and hopes to eventually make his way into film production.</p></div>
             <div class="div2"> 
                 <h2>Contact</h2>
                 <h2><a href="https://www.linkedin.com/in/darwin-charles-264a69132/">Linkedin</a></h2>
                 <h2>Darwinjcharles@gmail.com</h2></div>
 
-            <section>
-                    <h2>Portfolio</h2>
-                    <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam consequat diam a lectus bibendum tincidunt. Vestibulum eleifend nulla nibh, sit amet vulputate sem imperdiet quis. Nulla euismod dui vitae convallis auctor. Vivamus vel quam ut nunc mattis eleifend. Ut non gravida arcu, non maximus felis. Pellentesque nulla nisl, sagittis non commodo vel, aliquet sit amet nisl. Fusce lacinia, enim vel molestie iaculis, erat sem dictum ex, nec luctus nunc arcu nec dui. Nunc laoreet, massa in pretium suscipit, ex lorem imperdiet magna, eget euismod lectus risus sit amet diam. Ut et lacinia nisl, non iaculis massa. Etiam gravida sodales finibus. Fusce consectetur magna ut rutrum tincidunt.</h3>
-            </section>
+            
+        
 
                 <div class="div3"><h2><a href="#blog">Blog</a></h2></div>
                     <div class="div4"><h2><a href="#photography">Photography</a></h2></div>
