--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
         
 
                 <div class="div3"><h2><a href="#blog">Blog</a></h2></div>
-                    <div class="div4"><h2><a href="#photography">Photography</a></h2></div>
+                    <div class="div4"><h2><a href="#photography">Photography</a></h2>
+                    <img src="images/IMG_5239.jpeg">
+                    </div>
                     <div class="div5"><h2><a href="#paintings">Paintings & Illustrations</a></h2></div>
                     <div class="div6"><h2><a href="#design">Graphic Design</a></h2></div>
                   </div>
