--- a/index.html
+++ b/index.html
@@ -29,7 +29,9 @@
                     <div class="div4"><h2><a href="#photography">Photography</a></h2>
                     <img src="images/IMG_5239.jpeg">
                     </div>
-                    <div class="div5"><h2><a href="#paintings">Paintings & Illustrations</a></h2></div>
+                    <div class="div5"><h2><a href="#paintings">Paintings & Illustrations</a></h2>
+                        <img src="images/4E648C4C-FB88-47BD-84EA-4A68C5DACA84.JPG">
+                    </div>
                     <div class="div6"><h2><a href="#design">Graphic Design</a></h2></div>
                   </div>
         </div>
