--- a/index.html
+++ b/index.html
@@ -32,7 +32,9 @@
                     <div class="div5"><h2><a href="#paintings">Paintings & Illustrations</a></h2>
                         <img src="images/4E648C4C-FB88-47BD-84EA-4A68C5DACA84.JPG">
                     </div>
-                    <div class="div6"><h2><a href="#design">Graphic Design</a></h2></div>
+                    <div class="div6"><h2><a href="#design">Graphic Design</a></h2>
+                        <img src="images/PoetryBookCover.jpg">
+                    </div>
                   </div>
         </div>
 </body>
