--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <head>
 <link rel="stylesheet" href="css/styles.css">
 <meta charset="utf-8" />
+<meta name="viewport" content="width=device-width, initial-scale=1" />
     </head>
 <body>
     <h1>Official Portfolio of Darwin Jean-Charles</h1>
