--- a/index.html
+++ b/index.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
     <html lang="en">
         <div class="topnav">
-            <a class="active" href="#home">Home</a>
-            <a href="#blog">Blog</a>
-            <a href="#photography">Photography</a>
-            <a href="#paintings">Paintings</a>
-            <a href="#design">Design</a>
+            <a class="active" href="index.html">Home</a>
+            <a href="blog.html">Blog</a>
+            <a href="photography.html">Photography</a>
+            <a href="paintings.html">Paintings</a>
+            <a href="design.html">Design</a>
           </div>   
     <head>
 <link rel="stylesheet" href="css/styles.css">
