--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
             
         
 
-                <div class="div3"><h2><a href="#blog">Blog</a></h2></div>
-                    <div class="div4"><h2><a href="#photography">Photography</a></h2>
+                <div class="div3"><h2><a href="blog.html">Blog</a></h2></div>
+                    <div class="div4"><h2><a href="photography.html">Photography</a></h2>
                     <img src="images/IMG_5239.jpeg">
                     </div>
-                    <div class="div5"><h2><a href="#paintings">Paintings & Illustrations</a></h2>
+                    <div class="div5"><h2><a href="paintings.html">Paintings & Illustrations</a></h2>
                         <img src="images/4E648C4C-FB88-47BD-84EA-4A68C5DACA84.JPG">
                     </div>
-                    <div class="div6"><h2><a href="#design">Graphic Design</a></h2>
+                    <div class="div6"><h2><a href="design.html">Graphic Design</a></h2>
                         <img src="images/PoetryBookCover.jpg">
                     </div>
                   </div>
