--- a/paintings.html
+++ b/paintings.html
@@ -12,3 +12,11 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
     </head>
+    <body>
+        <h1>ACRYLIC ON CANVAS</h1>
+        <h3>Admittedly, I don’t paint often, mostly since materials are really expensive these days, but I do enjoy the experience whenever I do.</h3>
+        <img src="images/IMG_1214.jpg">
+        <img src="images/IMG_1215.jpg">
+        <img src="images/IMG_1216.jpg">
+        <img src="images/IMG_1217.jpg">
+    </body>
