--- a/photography.html
+++ b/photography.html
@@ -12,3 +12,10 @@
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
     </head>
+    <body>
+        <h1>PHOTOGRAPHY</h1>
+        <h3>can be seen as a gateway into the world of expression, especially in the design world. Most of us heard that “a picture is worth a thousand words”, I hope these are no exception.</h3>
+        <img src="images/Mushroom_BirdsEye.jpg" >
+        <img src="images/Photo2.png" >
+        <img src="images/BART.png" >
+    </body>
