--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
             
         
 
-                <div class="div3"><h2><a href="blog.html">Blog</a></h2></div>
+                <div class="div3"><h2><a href="blog.html">Blog</a></h2>
+                <img src="images/blogpost1.jpeg"></div>
                     <div class="div4"><h2><a href="photography.html">Photography</a></h2>
                     <img src="images/IMG_5239.jpeg">
                     </div>
