--- a/blog.html
+++ b/blog.html
@@ -17,7 +17,7 @@
         <H2>This blog is dedicated to anyone who feels like their voice isn’t important, or that their work isn’t valuable. Everyone has their own unique story, and all of those stories come with lessons that anyone can learn from. </H2>  
         <section>
            <h6>Feb 20, 2020</h6> 
-           <h2>The Perks of Having a Stutter</h2s>
+           <h2>The Perks of Having a Stutter</title>
            <p>I want to note that this is the first time I'm acknowledging my stutter as a "disability". For years, I never really thought of myself as disabled, but when I take a moment to consider what a disability is, I would argue that a stutter checks off almost all the boxes. Having to change how you communicate really adds a lot of obstacles to your life, and yet while living with a stutter is a very stressful experience, there are some silver linings to this dark cloud that’s been looming over me.</p>
 
            <img src="images/blogpost1.jpeg">/
