--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
     <head>
         <div class="topnav">
-            <a class="active" href="index.html">Home</a>
+            <a class="active" href="index.html"><img src="images/Untitled-1-01.png" ></a>
             <a href="blog.html">Blog</a>
             <a href="photography.html">Photography</a>
             <a href="paintings.html">Paintings</a>
